Fix Java compilation issues